--- a/assets/sass/_config.scss
+++ b/assets/sass/_config.scss
@@ -11,6 +11,7 @@ $alt-font-family: Georgia, Times, sans-serif;
 // The type-scale Map contains the whole type scale.
 // Add your own sizes or modify these, they will be available in the type-scale mixin for use.
 
+$type-prefix: "t-";
 $type-scale: (
     tiny: (
         font-size: 13px,
