--- a/assets/sass/_typomatic.scss
+++ b/assets/sass/_typomatic.scss
@@ -1,10 +1,36 @@
-// A mixin for scaling type that utilises the $type-scale map with the predefined values
+// A type scaling utility $type-scale map with the predefined values
 
-@mixin type-scale($scale, $map: $type-scale) {
-    $font-size: map-fetch($map, $scale font-size);
-    $base-lines: map-fetch($map, $scale base-lines);
-    @include adjust-font-size-to($font-size, $base-lines);
+ // Each loop that outputs all of the type scales as placeholders with their type-prefix
+ // ex. %t-tiny, %t-small
+@each $scale in map-keys($type-scale) {
+    %#{$type-prefix}#{$scale} {
+        @include adjust-font-size-to (
+            map-fetch($type-scale, $scale font-size),   
+            map-fetch($type-scale, $scale base-lines)
+        );
+    }
 }
+
+// A mixin for using type scale
+// Parameters: 
+// $scale (tiny, small...) 
+// $extend (boolean) - true by default, if needed inside media query use false to @include the content instead of @extend
+// ex. @include type-scale(small) or @include type-scale(small, false) for use inside media queries. 
+
+@mixin type-scale($scale, $extend: true, $map: $type-scale) {
+    @if $extend {
+        @extend %#{$type-prefix}#{$scale};
+    }
+    @else {
+        @include adjust-font-size-to(
+            map-fetch($map, $scale font-size),
+            map-fetch($map, $scale base-lines)
+        );
+    }
+}
+
+// A simple type-weight mixin
+// ex. @include type-weight(strong);
 @mixin type-weight($weight) {
     font-weight: map-get($type-weight, $weight);
 }
