--- a/assets/sass/_config.scss
+++ b/assets/sass/_config.scss
@@ -6,7 +6,7 @@ $rem-with-px-fallback: false;
 
 // The font family
 $base-font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif; 
-$alt-font-family: Georgia, Times, sans-serif; 
+$alt-font-family: Georgia, Times, serif; 
 
 // The type-scale Map contains the whole type scale.
 // Add your own sizes or modify these, they will be available in the type-scale mixin for use.
